* #576: templates will no longer be checked for modifications by default for performance reasons (Phoenyx)
* #705: Module name in module preferences breadcrumb is linked to module administration now (Phoenyx)
* #294: replaced scraps with system comment function in imProfile | ticket from addons (Phoenyx)

'''Fixed'''
* fixed class/icmsform/icmsform.php 723-728 lines (????) (mekdrop)
* #249: Path to ICMS_IMAGES_SET_URL corrected (sato-san)
* #657: Icons for adsense, rating and mime-types (sato-san)
* #548: Errors with class/theme.php (TheRplima)
* #636: search in the frontend works not (TheRplima)
* #587: banners.php with fatal error (TheRplima)
* #603: Filter for custom blocks in blocksadmin (TheRplima)
* #640: Version checker blank page when version file is not available (skenow)
* #653: wrong url to edit a block in group manager (Phoenyx)
* #242: email address isn't marked as required in the user form | ticket from addons (Phoenyx)
* #167: Location shows a Google Maps locator image even if no location is provided | ticket from addons (Phoenyx)
* #241: Fatal error: Class 'ProfileControlerTribes' not found when creating a comment on a tribe | ticket from addons (Phoenyx)
* #244: login_name in edituser.php is always 'login_name' | ticket from addons (Phoenyx)
* #166: some strange values for "settings" | ticket from addons (Phoenyx)
* #243: missing values for selection on comment and notification options | ticket from addons (Phoenyx)
* #656: make sure filename length is no longer than 30 chars in case the prefix is set (Phoenyx)
* #660: corrected typo in class/uploader.php (Phoenyx)
* #659: image manager now creates index.html for new categories (Phoenyx)
* #250: password is now marked as required in the user form | ticket from addons (Phoenyx)
* #614: moved wording from search template to language file and reworked search results (Phoenyx)
* #253: user_avatar for new users is now set to blank.gif using imProfile | ticket from addons (Phoenyx)